src/objects/Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Process_Builder_Logic__c</fullName>
        <label>Process Builder Logic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Values are based on the HEDA Race field, which matches IPEDS standards.</description>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The general plan or program the individual is interested in for marketing. A lookup to Program with a filter criteria of Record Type = Recruitment Program.</description>
        <inlineHelpText>The general plan or program the individual is interested in for marketing.</inlineHelpText>
        <label>Recruitment Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Recruitment Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Recruitment_Program_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Object_JSON__c</fullName>
        <label>Related Object JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>University_Email__c</fullName>
        <label>University Email</label>
        <type>Email</type>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Recruitment_Program__c</columns>
        <columns>Academic_Program__c</columns>
        <columns>Affiliated_Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Campaign__c</columns>
        <columns>Campaign_Member_Status__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Interaction_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <recordTypes>
        <fullName>Corporate_Engagement</fullName>
        <active>true</active>
        <description>For corporate engagement use</description>
        <label>Corporate Engagement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>